--- a/src/Pages/GoodsItem/GoodsItem.module.css
+++ b/src/Pages/GoodsItem/GoodsItem.module.css
@@ -45,4 +45,10 @@
     justify-content: center;
     align-items: end;
     gap: 10px;
+    align-items: end;
+    align-items: flex-end;
+    gap: 10px;
   }
+  
+
+
